Renomeei algumas imagens e alterei a page principal

--- a/index.css
+++ b/index.css
@@ -5,6 +5,14 @@
 	height: 2000px;
 }
 
+#load{
+    width:100%;
+    height:100%;
+    position:fixed;
+    z-index:9999;
+    background:url(/T--Rio_UFRJ_Brazil--loading.gif) no-repeat center center rgba(0,0,0,0.25)
+}
+
 header {
 	background: ;
     height: 10vh;
@@ -16,21 +24,29 @@ header {
 	position: fixed ;
 	width: 100%;
 	background-color: ;
+
 }
 #logomenu{
 	width: 20%;
 	position: absolute;
 	display: inline;
 
+
 }
-@font-face {
-	font-family: "Phenomena_Thin";
-	src: local(Phenomena-Thin), url(../Agora_Vai/Phenomena-Thin.otf);
- }
- @font-face {
-	font-family: "Marvin-Regular";
-	src: local(Marvin-Regular.otf), url(../Agora_Vai/Marvin-Regular.otf);
- }
+#imglogomenu{
+	width: 45%;
+	display: flex;
+	border: #024335ff 3px solid;
+	border-radius: 50%;
+	max-width: 100%;
+	margin: 0 auto;
+	position: relative;
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	transform: translateY(-50%);
+	top:50px;
+
+}
 
 nav {
 	position: absolute;
@@ -39,6 +55,7 @@ nav {
 	left: 0;
     width: 100%;
     padding: 7px 0;
+	border-bottom: #024335ff 3px solid;
 
 }
 
@@ -46,9 +63,9 @@ nav a {
 	text-transform: uppercase;
 	color: #000000;
 	text-align: center;
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	font-weight: bold;
-	font-size: 25px;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-weight: 600;
+	font-size: 23px;
 	text-decoration: none;
 }
 
@@ -129,12 +146,30 @@ text-shadow:0px 0px 5px #fff;
 .desenvolv2{
 	height: 100vh;
 	background-color: #FFFFFF;
+	display: inline-flex;
+}
+
+.conteudodesenvolv{
+	width: 50%;
+	padding: 30vh ;
+	font-size: large;
+}
+
+#antigeno_anticorpo{
+	width: 80vh;
+	height: 80vh;
+	position: static;
+	padding-top: 5vh;
+	padding-right: 10vh;
+
 }
 
 .desenvolv3{
 	height: 100vh;
 	background-color: #F2EDA7;
 }
+
+
 .desenvolv4{
 	height: 100vh;
 	background-color: #024335ff;
@@ -204,14 +239,17 @@ nav a:hover {
 #rodape{
 	width: 100%;
 }
+footer{
+	background-image: linear-gradient(#f5EBA2,#024335ff)
+}
 
 .social {
 	position: absolute;
-	display:inline-block;
+	
 	top: 50vh;
 	left:0px;
 	width: px ;
-	z-index: ;
+	z-index: 555;
 
 }
 
@@ -223,16 +261,16 @@ nav a:hover {
 
 
 #face {
-	width: 8px;
+	width: 7px;
 
 }
 
 #insta{
-	width: 8px;
+	width: 5px;
 }
 
 #in{
-	width: 8px;
+	width: 5px;
 }
 
 .contato{
