--- a/T--Rio_UFRJ_index.css
+++ b/T--Rio_UFRJ_index.css
@@ -303,3 +303,23 @@ footer{
 .team li{
 display: inline-block;
 }
+
+.colaboradores{
+	width: 100%;
+	height: 100%;
+	margin: 0 auto;
+	position: absolute;
+	margin-top: 10%;
+	z-index: -1;
+
+}
+
+.colaboradores li{
+	display: inline-block;
+	margin: 2%;
+}
+
+#janela2{
+	width: 100%;
+	height: 50%;
+}
