fiz, editei, redimensionei e adicinei as fotos dos rostos no team, tambem troquei a formatação da barra de menu e a cor dela

--- a/T--Rio_UFRJ_index.css
+++ b/T--Rio_UFRJ_index.css
@@ -326,9 +326,9 @@ footer{
 
 }
 .team{
-	width: 91%;
+	width: 90%;
 	margin: 0 auto;
-	background-color: grey;
+	background-color: whitesmoke;
 }
 .team li{
 display: inline-block;
