--- a/T--Rio_UFRJ_projectDescription.css
+++ b/T--Rio_UFRJ_projectDescription.css
@@ -2,20 +2,22 @@
 
     width: 100%;
     height: 600px;
-    background-image:url("");
+    background-image:url("T--Rio_UFRJ_mosquito.png");
 }
 .textoimagem {
     position: absolute;
-    background-color: (2,67,53);
-    color:black;
+    background-color: rgb(2,67,53,1);
+    color:rgb(241, 218, 218);
     text-align: center;
     width: 50%;
-    line-height: 30px;
-    height: 30px;
+    height: 55px;
+    padding: 20px;
+    line-height: 30px;;
     margin-left: 25%;
     margin-top: -300px;
     font-size:50.7px;
     font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .principal{
