--- a/T--Rio_UFRJ_Description.css
+++ b/T--Rio_UFRJ_Description.css
@@ -14,6 +14,11 @@
     height: 600px;
     background-image:url("T--Rio_UFRJ_projectModeling.png");
 }
+.imagem-acessibilidade{
+    width: 100%;
+    height: 600px;
+    background-image:url("T--Rio_UFRJ_inclusao.png");
+}
 .textoimagem {
     position: absolute;
     background-color: rgb(2,67,53,1);
@@ -28,6 +33,7 @@
     font-size:50.7px;
     font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
+    z-index: 0;
 }
 
 .principal{
@@ -41,9 +47,31 @@
 
 .coluna-50 {
     width: 50%;
+    font-size: 25px;
  }
 
  .coluna-100 {
     width: 100%;
+    font-size: 25px;
  }
 
+ h1{
+     font-size: 100px;
+     color: #024335;
+     font-family:'Courier New', Courier, monospace;
+     text-align: center;
+ }
+
+ h2{
+    font-size: 45px;
+    color: #024335;
+    font-family:'Courier New', Courier, monospace;
+    text-align: center;
+ }
+
+ h3{
+    font-size: 40px;
+    color: #ffb509;
+    font-family:'Courier New', Courier, monospace;
+    text-align: center;
+ }
