--- a/T--Rio_UFRJ_index.css
+++ b/T--Rio_UFRJ_index.css
@@ -56,6 +56,7 @@ header {
 	position: fixed ;
 	width: 100%;
 	background-color: ;
+	z-index: 1;
 
 }
 #logomenu{
@@ -105,7 +106,8 @@ nav a {
 /* caixa dos submenus*/
 nav li {
 	display: inline;
-	margin: 5px 10px 5px 5px;}
+	margin: 5px 10px 5px 5px;
+	z-index: 1;}
 
 body{
 font-family: arial, helvetica, sans-serif;
@@ -330,7 +332,7 @@ footer{
 
 }
 .team{
-	width: 90%;
+	width: 71.90%;
 	margin: 0 auto;
 	background-color: whitesmoke;
 }
