--- a/T--Rio_UFRJ_index.css
+++ b/T--Rio_UFRJ_index.css
@@ -359,3 +359,16 @@ display: inline-block;
 	width: 100%;
 	height: 50%;
 }
+
+.seta-baixo:before {
+	content: "";
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 2px;
+	width: 0; 
+	height: 0; 
+  
+	border-left: 7px solid transparent;
+	border-right: 7px solid transparent;
+	border-top: 7px solid green;
+  }
