--- a/T--Rio_UFRJ_frame.css
+++ b/T--Rio_UFRJ_frame.css
@@ -15,3 +15,56 @@ iframe::-webkit-scrollbar{
     display: block;
     overflow: hidden;
 }
+
+.agradecimento{
+    border: none;
+    background: url('T--Rio_UFRJ_agradecimento.png') no-repeat; 
+    width: auto;
+    height: 400px;
+    background-position: center;
+}
+.fabiana{
+    z-index: 5
+    border: none;
+    background: url('T--Rio_UFRJ_fabiana.png') no-repeat; 
+    width: auto;
+    height: 400px;
+    background-position: center;
+}
+
+
+
+.monica{
+    z-index: 5
+    border: none;
+    background: url('T--Rio_UFRJ_monica.png') no-repeat; 
+    width: auto;
+    height: 400px;
+    background-position: center;
+}
+
+
+p{
+    color: antiquewhite;
+    margin-left: 140px;
+    position: relative;
+    top: 120px;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
+h6{
+    position: relative;
+    top: 200px;
+    left: 500px;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 20px;
+}
+
+h7{
+    position: relative;
+    top: 210px;
+    left: 450px;
+    color: antiquewhite;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
