adicioandno o as paginas do site

--- a/T--Rio_UFRJ_Brazil--Description.css
+++ b/T--Rio_UFRJ_Brazil--Description.css
@@ -24,7 +24,7 @@
 
     width: 100%;
     height: 600px;
-    background-image:url("T--Rio_UFRJ_Brazil--Partnership.png");
+    background-image:url("https://2021.igem.org/wiki/images/3/3a/T--Rio_UFRJ_Brazil--Project-Description-Interacao-Antigeno-Anticorpo.png");
     background-repeat: no-repeat;
 }
 .imagemparts {
